--- a/TeacherTools.csproj
+++ b/TeacherTools.csproj
@@ -5,15 +5,19 @@
     <RunCommand>dotnet</RunCommand>
     <RunArguments>blazor serve</RunArguments>
     <LangVersion>7.3</LangVersion>
+    <BlazorLinkOnBuild>false</BlazorLinkOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Extensions.Storage" Version="0.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.7.0" PrivateAssets="all" />
 
     <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.7.0" />
 
-    <Watch Include="**\*.cshtml"/>
-  </ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
 
+    <Watch Include="**\*.cshtml" />
+    
+  </ItemGroup>
 </Project>
